--- a/angular/mixins/input-field.scss
+++ b/angular/mixins/input-field.scss
@@ -48,11 +48,11 @@
         &.mat-form-field-appearance-standard,
         &.mat-form-field-appearance-fill {
             .mat-form-field-underline {
-                background-color: map-get($palette, underlineColor);
+                background-color: map-deep-get($palette, underline, default);
             }
 
             .mat-form-field-flex:hover + .mat-form-field-underline {
-                background-color: map-get($palette, underlineHoverColor);
+                background-color: map-deep-get($palette, underline, onHover);
             }
 
             .mat-form-field-flex + .mat-form-field-underline .mat-form-field-ripple {
@@ -66,18 +66,18 @@
 
         /* Label */
         .mat-form-field-label {
-            color: map-get($palette, labelEmpty);
+            color: map-deep-get($palette, label, withoutValue);
         }
 
         /* Filled Label */
         &.mat-form-field-should-float .mat-form-field-label {
-            color: map-get($palette, labelFilled);
+            color: map-deep-get($palette, label, withValue);
         }
 
         /* Label Focus */
         .mat-form-field-flex:focus-within {
             .mat-form-field-label {
-                color: map-get($palette, labelFocused);
+                color: map-deep-get($palette, label, onFocus);
             }
         }
 
@@ -101,15 +101,15 @@
         &.mat-form-field-appearance-standard,
         &.mat-form-field-appearance-fill {
             .mat-form-field-flex + .mat-form-field-underline .mat-form-field-ripple {
-                background-color: map-get($palette, underlineColor);
+                background-color: map-deep-get($palette, underline, default);
             }
 
             .mat-form-field-flex:hover + .mat-form-field-underline .mat-form-field-ripple {
-                background-color: map-get($palette, underlineHoverColor);
+                background-color: map-deep-get($palette, underline, onHover);
             }
 
             .mat-form-field-flex:focus-within + .mat-form-field-underline .mat-form-field-ripple {
-                background-color: map-get($palette, underlineFocusColor);
+                background-color: map-deep-get($palette, underline, onFocus);
             }
         }
 
@@ -119,13 +119,13 @@
                 background-color: map-get($palette, filledBackgroundColor);
             }
             .mat-form-field-outline-thick {
-                color: map-get($palette, underlineColor);
+                color: map-deep-get($palette, underline, default);
             }
             .mat-form-field-flex:hover .mat-form-field-outline-thick {
-                color: map-get($palette, underlineHoverColor);
+                color: map-deep-get($palette, underline, onHover);
             }
             .mat-form-field-flex:focus-within .mat-form-field-outline-thick {
-                color: map-get($palette, underlineFocusColor);
+                color: map-deep-get($palette, underline, onFocus);
             }
         }
 
@@ -137,13 +137,13 @@
                 .mat-form-field-outline-gap {
                     border-width: 1px;
                 }
-                color: map-get($palette, underlineColor);
+                color: map-deep-get($palette, underline, default);
             }
             .mat-form-field-flex:hover .mat-form-field-outline-thick {
-                color: map-get($palette, underlineHoverColor);
+                color: map-deep-get($palette, underline, onHover);
             }
             .mat-form-field-flex:focus-within .mat-form-field-outline-thick {
-                color: map-get($palette, underlineFocusColor);
+                color: map-deep-get($palette, underline, onFocus);
                 .mat-form-field-outline-start,
                 .mat-form-field-outline-end,
                 .mat-form-field-outline-gap {
